k3s-cluster-automate/manifests/cloudflared.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-tunnel
  namespace: cf-tunnel
  labels:
    app: cf-tunnel
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cf-tunnel
  template:
    metadata:
      labels:
        app: cf-tunnel
    spec:
      containers:
        - name: cf
          image: cloudflare/cloudflared:2024.12.2
          args: ["tunnel" , "--no-autoupdate", "run", "--token", "$(CF_TOKEN)"]
---
