k3s-cluster-automate/manifests/homepage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: web
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v0.10.1
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
          - name: homepage-storage
            mountPath: /app/config
      volumes:
        - name: homepage-storage
          persistentVolumeClaim:
            claimName: homepage
---
apiVersion: v1
kind: Service
metadata:
  name: homepage-clusterip
  namespace: web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: homepage
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - "home.local.lttviet.com"
    secretName: lttviet.com
  rules:
    - host: home.local.lttviet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-clusterip
                port:
                  number: 80
---
