k3s-cluster-automate/manifests/oai.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oai
  namespace: web
  labels:
    app: oai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oai
  template:
    metadata:
      labels:
        app: oai
    spec:
      containers:
        - name: oai
          image: khanonci/oai-reverse-proxy:latest
          ports:
            - name: http
              containerPort: 7860
          volumeMounts:
            - name: oai-storage
              mountPath: /app/data
            - name: greeting
              mountPath: /app/greeting.md
              subPath: greeting.md
      volumes:
        - name: oai-storage
          persistentVolumeClaim:
            claimName: oai
        - name: greeting
          configMap:
            name: greeting
---
apiVersion: v1
kind: Service
metadata:
  name: oai-clusterip
  namespace: web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 7860
  selector:
    app: oai
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oai
  namespace: web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - 'oai.local.lttviet.com'
      secretName: lttviet.com
  rules:
    - host: oai.local.lttviet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oai-clusterip
                port:
                  number: 80
---
