k3s-cluster-automate/manifests/sillytavern.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sillytavern
  namespace: web
  labels:
    app: sillytavern
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sillytavern
  template:
    metadata:
      labels:
        app: sillytavern
    spec:
      containers:
        - name: sillytavern
          image: ghcr.io/sillytavern/sillytavern:1.12.9
          command: ['node']
          args: ['server.js', '--disableCsrf']
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: sillytavern-storage
              mountPath: /home/node/app/config
              subPath: config
            - name: sillytavern-storage
              mountPath: /home/node/app/data
              subPath: data
      volumes:
        - name: sillytavern-storage
          persistentVolumeClaim:
            claimName: sillytavern
---
apiVersion: v1
kind: Service
metadata:
  name: sillytavern-clusterip
  namespace: web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app: sillytavern
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sillytavern
  namespace: web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - 'tavern.local.lttviet.com'
      secretName: lttviet.com
  rules:
    - host: tavern.local.lttviet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sillytavern-clusterip
                port:
                  number: 80
---
